@@ -16,8 +16,6 @@ keywords: netapp, solutions, hybrid cloud, private cloud, virtualization, vdi, v
 [.lead]
 Overview of the videos and demos highlighting specific features of theHybrid Cloud, Desktop Virtualization and Containers solutions.
 
-=== Hybrid / Private Cloud Videos / Demos
+=== NetApp with VMware Tanzu Video Series
 
-=== Desktop Virtualization Videos / Demos
-
-=== Containers Videos / Demos 
+* link:https://www.youtube.com/watch?v=ZtbXeOJKhrc&ab_channel=NetAppTechCommTV[How to use vVols with NetApp and VMware Tanzu Basic]
