@@ -19,6 +19,7 @@ Recent changes to the NetApp Solutions collateral.  The most recent changes are 
 [width=100%,cols="2, 4, 10",grid="all"]
 |===
 | *Date* | *Solution Area* | *Description of change*
+| 03/23/2021 | VMware Virtualization | Video: How to use vVols with NetApp and VMware Tanzu Basic
 | 03/09/2021 | AI, DB, Data Protection | Added E-Series content; categorized AI content
 | 03/04/2021 | Solution Automation | New content: getting started with NetApp solution automation
 | 02/18/2021 | VMware Virtualization | Added VMware vSphere for ONTAP TR
